[gd_scene load_steps=33 format=3 uid="uid://b67fa8aamrhyo"]

[ext_resource type="Script" uid="uid://bbsy5ntqdnuwx" path="res://inimigos/inimigo.gd" id="1_24jc1"]
[ext_resource type="Texture2D" uid="uid://db47s0bwgywar" path="res://Assets (GERAL)/assets/spritesheet.png" id="1_y2cd2"]
[ext_resource type="Shader" uid="uid://b805sikk6kcay" path="res://inimigos/inimigos_hit.gdshader" id="2_faa6o"]
[ext_resource type="PackedScene" uid="uid://bg2l8bjf3e738" path="res://particulas/particulas_base.tscn" id="3_tqiwb"]
[ext_resource type="Texture2D" uid="uid://bq80m5rure6es" path="res://imagens/Sprites de movimento/Sprites de movimento/Inimigo sprite.png" id="5_8wfv4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqiwb"]
resource_local_to_scene = true
shader = ExtResource("2_faa6o")
shader_parameter/_is_active = false

[sub_resource type="Animation" id="Animation_tqiwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_24jc1"]
resource_name = "scale"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_faa6o"]
_data = {
&"RESET": SubResource("Animation_tqiwb"),
&"scale": SubResource("Animation_24jc1")
}

[sub_resource type="Animation" id="Animation_02qo0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/_is_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8wfv4"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/_is_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crr6q"]
_data = {
&"RESET": SubResource("Animation_02qo0"),
&"hit": SubResource("Animation_8wfv4")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_86au8"]
atlas = ExtResource("5_8wfv4")
region = Rect2(13, 46, 24, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg8ns"]
atlas = ExtResource("5_8wfv4")
region = Rect2(37, 46, 24, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_uftwo"]
atlas = ExtResource("5_8wfv4")
region = Rect2(61, 46, 24, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_crr6q"]
atlas = ExtResource("5_8wfv4")
region = Rect2(43, 47, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wfv4"]
atlas = ExtResource("5_8wfv4")
region = Rect2(63, 47, 25, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_02qo0"]
atlas = ExtResource("5_8wfv4")
region = Rect2(17, 47, 25, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gdo0"]
atlas = ExtResource("5_8wfv4")
region = Rect2(44, 1, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_cotpb"]
atlas = ExtResource("5_8wfv4")
region = Rect2(63, 1, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc4ym"]
atlas = ExtResource("5_8wfv4")
region = Rect2(18, 1, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydrno"]
atlas = ExtResource("5_8wfv4")
region = Rect2(16, 47, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r8ko"]
atlas = ExtResource("5_8wfv4")
region = Rect2(16, 47, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3u4g"]
atlas = ExtResource("5_8wfv4")
region = Rect2(16, 1, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r4s1"]
atlas = ExtResource("5_8wfv4")
region = Rect2(16, 24, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7hsa"]
atlas = ExtResource("5_8wfv4")
region = Rect2(62, 24, 21, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_h304e"]
atlas = ExtResource("5_8wfv4")
region = Rect2(13, 23, 24, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_skspw"]
atlas = ExtResource("5_8wfv4")
region = Rect2(42, 24, 21, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_02qo0"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86au8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg8ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uftwo")
}],
"loop": true,
"name": &"direita",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crr6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wfv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02qo0")
}],
"loop": true,
"name": &"esquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gdo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cotpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc4ym")
}],
"loop": true,
"name": &"frente",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydrno")
}],
"loop": true,
"name": &"parado_direita",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r8ko")
}],
"loop": true,
"name": &"parado_esquerda",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3u4g")
}],
"loop": true,
"name": &"parado_frente",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r4s1")
}],
"loop": true,
"name": &"parado_tras",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7hsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h304e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skspw")
}],
"loop": true,
"name": &"tras",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y2cd2"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_24jc1"]
radius = 140.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tqiwb"]
radius = 36.8782

[node name="Inimigos_de_base" type="CharacterBody2D" node_paths=PackedStringArray("_hitbox_are", "_dash_wait_time", "_dash_timer", "_invencibili_timer", "_auxiliar_animation", "anim_sprite")]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_24jc1")
_dash_speed = 700.0
_hitbox_are = NodePath("HeatboxArea")
_dash_wait_time = NodePath("DashTempo")
_dash_timer = NodePath("DashTimer")
_invencibili_timer = NodePath("HeatboxArea/InvencibiliTimer")
_auxiliar_animation = NodePath("Textura/Animationhit")
anim_sprite = NodePath("Textura/lado")

[node name="Textura" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tqiwb")
texture = ExtResource("1_y2cd2")
region_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Textura"]
libraries = {
&"": SubResource("AnimationLibrary_faa6o")
}
autoplay = "scale"

[node name="Animationhit" type="AnimationPlayer" parent="Textura"]
libraries = {
&"": SubResource("AnimationLibrary_crr6q")
}

[node name="lado" type="AnimatedSprite2D" parent="Textura"]
position = Vector2(0, -14)
scale = Vector2(1.99107, 2.39946)
sprite_frames = SubResource("SpriteFrames_02qo0")
animation = &"esquerda"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_y2cd2")

[node name="Area_aucance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_aucance"]
visible = false
shape = SubResource("CircleShape2D_24jc1")

[node name="DashTempo" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HeatboxArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="HeatboxArea"]
visible = false
shape = SubResource("CircleShape2D_tqiwb")

[node name="InvencibiliTimer" type="Timer" parent="HeatboxArea"]
wait_time = 0.5
one_shot = true

[node name="CPUParticles2D" parent="." instance=ExtResource("3_tqiwb")]

[connection signal="body_entered" from="Area_aucance" to="." method="_on_area_aucance_body_entered"]
[connection signal="timeout" from="DashTempo" to="." method="_on_dash_tempo_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_tempo_timeout"]
[connection signal="body_entered" from="HeatboxArea" to="." method="_on_heatbox_area_body_entered"]
[connection signal="timeout" from="HeatboxArea/InvencibiliTimer" to="." method="_on_invencibili_timer_timeout"]
